# ai-database-query-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: api.md
examples/: basic_usage.py
scripts/: setup_ollama.py  test_ollama.py
src/: main.py
src/agents/: __init__.py  query_generator.py  query_optimizer.py  result_explainer.py  safety_validator.py  schema_analyzer.py  workflow.py
src/database/: __init__.py  manager.py
src/utils/: __init__.py  config.py  llm_factory.py
tests/: conftest.py  test_models.py
